2003-06-10  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_monitor_memory_thread): gdb can't implement
	watchpoints in a threaded program, so do the next best thing
	and monitor the fucker yourself.

	* lib/b_getbyfoo.c (copy_hostent): Off-by-one--not copying
	trailing NULL hostentlist termination.  And insight didn't
	discover this why?

2003-06-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_close): Lock before searching fd association
	list.

	* lib/b_ioh.c (CALL_BACK): Make incallback a counter instead of a
	flag--may be recursive.

2003-06-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Memory leak on writes

	* lib/b_config.c (load_config_from_file): Memory leak during comments

2003-06-03  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_getbyfoo.c (bk_gethostbyfoo): Memory leak due to reentrant
	gethostbyname_r functions.

	* lib/b_pollio.c (bk_polling_io_write): Timeout processing
	confused--stale event queue jobs possible
	(bk_polling_io_read): Same confusion here, plus more from original
	implementation copy-paste error from io-write

2003-06-03  Alexander Dupuy  <dupuy@sysdetect.com>

	* ssl/Makefile: BK_NO_STRICT_PROTOTYPES=true for *BSD compile

	* include/libbk_oscompat.h: centralize environ declaration here

	* lib/b_general.c, lib/b_string.c, test/test_stringconv.c: nuke environ

2003-06-03  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_atomic_add_init): Reference counts useful
	even when threading not enabled.  Also, fix thread destruction bug
	(the thread list is a struct, not a CLC, baka)

	* lib/b_pollio.c (polling_io_ioh_handler): Defer CLC add until
	after we have totally fixed up pid, since peer thread may start
	mucking with pid immediately.

2003-06-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (ioht_raw_other): Batch multiple writes together
